--- a/Calc.css
+++ b/Calc.css
@@ -1,189 +1,93 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+@import url("DS-DIGI.TTF");
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: 0;
 }
 
 /* ------------------------------------------ */
-
+body {
+  font-family: Verdana, Geneva, sans-serif;
+}
 :root {
   --color1: #008cb0;
   --color2: #2e6480;
 }
-main{
-    margin: 0 auto;
-    max-width: 360px;
+main {
+  margin: 0 auto;
+  max-width: 400px;
+  background-color: var(--color1);
+  padding: 1.5em;
+}
+.logo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 85px;
+  color: white;
+}
+.left {
+  font-size: 30px;
+  font-weight: 700;
+}
+.right {
+  font-size: 13px;
+}
+.solar {
+  background-color: #353030;
+  width: 100%;
+  height: 50px;
 }
 .display {
-    background: var(--color1);
-    padding: 2px 16px;
+  margin: 1em 0;
 }
 .lcd {
-    background-color: #cfe3e4;
-    letter-spacing: -0.056em;
-    font-weight: 100;
-    font-size: 2.9em;
+  background-color: #cfe3e4;
+  letter-spacing: -0.056em;
+  font-weight: 100;
+  font-size: 3.5em;
+  text-align: right;
 }
 
-.button {
-	display: grid;
-	grid-template: repeat(6, 1fr) / repeat(5, 1fr);
-	grid-gap: 10px 15px;
-	background: var(--color1);
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 15px 10px;
 }
 .btn {
-	background: var(--color1);
-	display: grid;
-	justify-content: center;
-	align-items: center;
-	color: white;
-	border-radius: 15px;
-    box-shadow: 2px 2px 4px 2px rgba(1, 1, 1, 0.8);
-    font-size: 2em;
-    letter-spacing: -0.067em;
-    font-weight: 315;
- 
-}
-.btn:hover{
-    opacity: .7;
+  all: unset;
+  border: 1px solid var(--color2);
+  border-radius: 17px;
+  width: 60px;
+  height: 45px;
+  margin: auto;
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  box-shadow: 3px 3px 8px 0px black, inset 1px 1px 2px white;
+  position: relative;
 }
 
-.btn:nth-child(25){
-  grid-row: span 2;  
+.btn:hover {
+  box-shadow: 3px 3px 4px 0px black, inset 1px 1px 2px white;
+  font-size: 29px;
+}
+.btn:nth-child(20) {
+  grid-row: span 2;
+  height: 100%;
+}
+.btn:nth-child(16),
+.btn:nth-child(21) {
+  background: var(--color2);
 }
 
-.btn:nth-child(21),
-.btn:nth-child(26){
-    background: var(--color2);
+.btn:nth-child(21)::after {
+  position: absolute;
+  content: "ON";
+  font-size: 12px;
+  bottom: -18px;
+  left: 25px;
 }
-
