--- a/Calc.css
+++ b/Calc.css
@@ -1,4 +1,7 @@
-@import url("DS-DIGI.TTF");
+@font-face {
+  font-family: "Liquid Crystal";
+  src: url("font.otf");
+}
 
 *,
 *::before,
@@ -11,7 +14,8 @@
 
 /* ------------------------------------------ */
 body {
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 5px;
 }
 :root {
   --color1: #008cb0;
@@ -21,13 +25,20 @@ main {
   margin: 0 auto;
   max-width: 400px;
   background-color: var(--color1);
-  padding: 1.5em;
+  padding: 1.5em 1em;
+  border-radius: 20px;
+  box-shadow: 1px 1px 6px 0px black;
+  border: 1px solid var(--color2);
 }
 .logo {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 85px;
   color: white;
+}
+.left,
+.right {
+  display: grid;
+  place-content: center;
 }
 .left {
   font-size: 30px;
@@ -35,33 +46,39 @@ main {
 }
 .right {
   font-size: 13px;
+  place-content: initial;
 }
 .solar {
   background-color: #353030;
   width: 100%;
   height: 50px;
+  border-radius: 3px;
 }
 .display {
   margin: 1em 0;
 }
 .lcd {
-  background-color: #cfe3e4;
-  letter-spacing: -0.056em;
-  font-weight: 100;
+  font-family: "Liquid Crystal", Verdana, Geneva, sans-serif;
+  background-color: rgba(255, 255, 255, 0.85);
   font-size: 3.5em;
+  padding: 10px 5px;
+  overflow: scroll;
+  direction: revert;
+  height: 70px;
   text-align: right;
 }
 
 .buttons {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 15px 10px;
+  grid-gap: 20px 10px;
+  padding: 1em 0;
 }
 .btn {
   all: unset;
   border: 1px solid var(--color2);
   border-radius: 17px;
-  width: 60px;
+  width: 100%;
   height: 45px;
   margin: auto;
   text-align: center;
@@ -88,6 +105,7 @@ main {
   position: absolute;
   content: "ON";
   font-size: 12px;
-  bottom: -18px;
-  left: 25px;
+  bottom: -50%;
+  left: 50%;
+  transform: translateX(-50%);
 }
