--- a/Calc.css
+++ b/Calc.css
@@ -13,14 +13,20 @@
 }
 
 /* ------------------------------------------ */
-body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin: 5px;
-}
 :root {
   --color1: #008cb0;
   --color2: #2e6480;
 }
+
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  min-height: 100vh;
+  display: grid;
+  place-content: center;
+  padding: 5px;
+  background-color: #353030;
+}
+
 main {
   margin: 0 auto;
   max-width: 400px;
@@ -61,10 +67,10 @@ main {
   font-family: "Liquid Crystal", Verdana, Geneva, sans-serif;
   background-color: rgba(255, 255, 255, 0.85);
   font-size: 3.5em;
-  padding: 10px 5px;
-  overflow: scroll;
+  overflow: auto;
   direction: revert;
-  height: 70px;
+  height: 80px;
+  line-height: 80px;
   text-align: right;
 }
 
