--- a/Calc.css
+++ b/Calc.css
@@ -29,12 +29,16 @@ body {
 
 main {
   margin: 0 auto;
-  max-width: 400px;
+  width: 350px;
+  max-width: 100vw;
   background-color: var(--color1);
   padding: 1.5em 1em;
   border-radius: 20px;
   box-shadow: 1px 1px 6px 0px black;
   border: 1px solid var(--color2);
+}
+main > section {
+  margin-bottom: 1em;
 }
 .logo {
   display: grid;
@@ -60,9 +64,6 @@ main {
   height: 50px;
   border-radius: 3px;
 }
-.display {
-  margin: 1em 0;
-}
 .lcd {
   font-family: "Liquid Crystal", Verdana, Geneva, sans-serif;
   background-color: rgba(255, 255, 255, 0.85);
@@ -78,7 +79,6 @@ main {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 20px 10px;
-  padding: 1em 0;
 }
 .btn {
   all: unset;
@@ -110,8 +110,8 @@ main {
 .btn:nth-child(21)::after {
   position: absolute;
   content: "ON";
-  font-size: 12px;
-  bottom: -50%;
+  font-size: 13px;
+  bottom: -45%;
   left: 50%;
   transform: translateX(-50%);
 }
