--- a/Calc.css
+++ b/Calc.css
@@ -92,6 +92,7 @@ main > section {
   font-size: 30px;
   box-shadow: 3px 3px 8px 0px black, inset 1px 1px 2px white;
   position: relative;
+  letter-spacing: -2px;
 }
 
 .btn:hover {
