--- a/calc.css
+++ b/calc.css
@@ -34,7 +34,7 @@ main {
   background-color: var(--color1);
   padding: 1.5em 1em;
   border-radius: 20px;
-  box-shadow: 1px 1px 6px 0px black;
+  box-shadow: 1px 1px 6px 0px #777;
   border: 1px solid var(--color2);
 }
 main > section {
@@ -73,6 +73,7 @@ main > section {
   height: 80px;
   line-height: 80px;
   text-align: right;
+  padding: 0 10px;
 }
 
 .buttons {
