--- a/calc.css
+++ b/calc.css
@@ -20,6 +20,8 @@
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 300;
   min-height: 100vh;
   display: grid;
   place-content: center;
@@ -83,22 +85,24 @@ main > section {
 }
 .btn {
   all: unset;
-  border: 1px solid var(--color2);
-  border-radius: 17px;
+  border: 1px solid black;
+  border-radius: 16px;
   width: 100%;
   height: 45px;
   margin: auto;
   text-align: center;
   color: white;
   font-size: 30px;
-  box-shadow: 3px 3px 8px 0px black, inset 1px 1px 2px white;
+  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.5),
+    inset 1px 1px 1px rgba(255, 255, 255, 0.6);
   position: relative;
   letter-spacing: -2px;
+  transition: all 50ms ease-in-out;
+  user-select: none;
 }
 
 .btn:hover {
-  box-shadow: 3px 3px 4px 0px black, inset 1px 1px 2px white;
-  font-size: 29px;
+  box-shadow: 0 0 3px 1px black, inset 0 0 1px 1px white;
 }
 .btn:nth-child(20) {
   grid-row: span 2;
