--- a/calc.css
+++ b/calc.css
@@ -36,9 +36,10 @@ main {
   background-color: var(--color1);
   padding: 1.5em 1em;
   border-radius: 20px;
-  box-shadow: 1px 1px 6px 0px #777;
-  border: 1px solid var(--color2);
+  box-shadow: 0 0 6px 0px #000;
+  border: 1px solid #282828;
 }
+
 main > section {
   margin-bottom: 1em;
 }
@@ -65,6 +66,10 @@ main > section {
   width: 100%;
   height: 50px;
   border-radius: 3px;
+  line-height: 50px;
+  font-size: 2em;
+  text-align: center;
+  text-transform: uppercase;
 }
 .lcd {
   font-family: "Liquid Crystal", Verdana, Geneva, sans-serif;
