--- a/calc.css
+++ b/calc.css
@@ -16,6 +16,7 @@
 :root {
   --color1: #008cb0;
   --color2: #2e6480;
+  --color3: #353030;
 }
 
 body {
@@ -26,7 +27,7 @@ body {
   display: grid;
   place-content: center;
   padding: 5px;
-  background-color: #353030;
+  background-color: var(--color3);
 }
 
 main {
@@ -37,7 +38,8 @@ main {
   padding: 2em 1em;
   border-radius: 20px;
   box-shadow: 0 0 6px 0px #000;
-  border: 1px solid #282828;
+  border: 1px solid: var(--color3); 
+  
 }
 
 main > section {
@@ -65,7 +67,7 @@ main > section {
   place-content: initial;
 }
 .solar {
-  background-color: #353030;
+  background-color: var(--color3);
   width: 100%;
   height: 50px;
   border-radius: 3px;
@@ -84,6 +86,7 @@ main > section {
   line-height: 80px;
   text-align: right;
   padding: 0 10px;
+  color: var(--color3);
 }
 
 .buttons {
