--- a/calc.css
+++ b/calc.css
@@ -38,8 +38,7 @@ main {
   padding: 2em 1em;
   border-radius: 20px;
   box-shadow: 0 0 6px 0px #000;
-  border: 1px solid: var(--color3); 
-  
+  border: 1px solid var(--color3);
 }
 
 main > section {
