Change font to system-ui

--- a/calc.css
+++ b/calc.css
@@ -1,5 +1,6 @@
 @font-face {
   font-family: "Liquid Crystal";
+  font-family:'system-ui, Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
   src: url("font.otf");
 }
 
